--- a/release/help/SeqArray-package.html
+++ b/release/help/SeqArray-package.html
@@ -120,10 +120,10 @@ vcf.fn
 # or vcf.fn &lt;- "C:/YourFolder/Your_VCF_File.vcf"
 
 # parse the header
-seqVCF.Header(vcf.fn)
+seqVCF_Header(vcf.fn)
 
 # get sample id
-seqVCF.SampID(vcf.fn)
+seqVCF_SampID(vcf.fn)
 
 # convert
 seqVCF2GDS(vcf.fn, "tmp.gds")
@@ -214,5 +214,5 @@ summary(af)
 seqClose(f)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.10.2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.12.0 <a href="00Index.html">Index</a>]</div>
 </body></html>
