--- a/release/help/seqVCF_SampID.html
+++ b/release/help/seqVCF_SampID.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
-<table width="100%" summary="page for seqVCF.SampID {SeqArray}"><tr><td>seqVCF.SampID {SeqArray}</td><td style="text-align: right;">R Documentation</td></tr></table>
+<table width="100%" summary="page for seqVCF_SampID {SeqArray}"><tr><td>seqVCF_SampID {SeqArray}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
 <h2>Get the Sample IDs</h2>
 
@@ -16,7 +16,7 @@
 <h3>Usage</h3>
 
 <pre>
-seqVCF.SampID(vcf.fn)
+seqVCF_SampID(vcf.fn)
 </pre>
 
 
@@ -47,7 +47,7 @@ Bioinformatics. 2011 Aug 1;27(15):2156-8. Epub 2011 Jun 7.
 
 <h3>See Also</h3>
 
-<p><code><a href="seqVCF.Header.html">seqVCF.Header</a></code>, <code><a href="seqVCF2GDS.html">seqVCF2GDS</a></code>
+<p><code><a href="seqVCF_Header.html">seqVCF_Header</a></code>, <code><a href="seqVCF2GDS.html">seqVCF2GDS</a></code>
 </p>
 
 
@@ -58,8 +58,8 @@ Bioinformatics. 2011 Aug 1;27(15):2156-8. Epub 2011 Jun 7.
 (vcf.fn &lt;- seqExampleFileName("vcf"))
 
 # get sample id
-seqVCF.SampID(vcf.fn)
+seqVCF_SampID(vcf.fn)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.10.2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.12.0 <a href="00Index.html">Index</a>]</div>
 </body></html>
