--- a/release/help/seqBED2GDS.html
+++ b/release/help/seqBED2GDS.html
@@ -9,7 +9,7 @@
 
 <h3>Description</h3>
 
-<p>Converts a PLINK BED file to a sequence GDS file.
+<p>Converts a PLINK BED file to a SeqArray GDS file.
 </p>
 
 
@@ -18,7 +18,7 @@
 <pre>
 seqBED2GDS(bed.fn, fam.fn, bim.fn, out.gdsfn,
     compress.geno="ZIP_RA", compress.annotation="ZIP_RA",
-    optimize=TRUE, verbose=TRUE)
+    optimize=TRUE, digest=TRUE, verbose=TRUE)
 </pre>
 
 
@@ -57,6 +57,12 @@ except &quot;genotype&quot;; optional values are defined in the function
 <td>
 <p>if <code>TRUE</code>, optimize the access efficiency by calling
 <code><a href="../../gdsfmt/html/cleanup.gds.html">cleanup.gds</a></code></p>
+</td></tr>
+<tr valign="top"><td><code>digest</code></td>
+<td>
+<p>a logical value (TRUE/FALSE) or a character (&quot;md5&quot;, &quot;sha1&quot;,
+&quot;sha256&quot;, &quot;sha384&quot; or &quot;sha512&quot;); add hash codes to the GDS file if TRUE
+or a digest algorithm is specified</p>
 </td></tr>
 <tr valign="top"><td><code>verbose</code></td>
 <td>
@@ -101,5 +107,5 @@ seqSummary("tmp.gds")
 unlink("tmp.gds", force=TRUE)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.10.2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.12.0 <a href="00Index.html">Index</a>]</div>
 </body></html>
