--- a/release/help/seqClose.html
+++ b/release/help/seqClose.html
@@ -9,7 +9,7 @@
 
 <h3>Description</h3>
 
-<p>Closes a sequence GDS file which is open.
+<p>Closes a SeqArray GDS file which is open.
 </p>
 
 
@@ -64,5 +64,5 @@ seqClose(object)
 <p><code><a href="seqOpen.html">seqOpen</a></code>
 </p>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.10.2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.12.0 <a href="00Index.html">Index</a>]</div>
 </body></html>
