--- a/release/help/seqDelete.html
+++ b/release/help/seqDelete.html
@@ -9,7 +9,7 @@
 
 <h3>Description</h3>
 
-<p>Deletes variables in the sequence GDS file.
+<p>Deletes variables in the SeqArray GDS file.
 </p>
 
 
@@ -17,7 +17,7 @@
 
 <pre>
 seqDelete(gdsfile, info.varname=character(), format.varname=character(),
-    verbose=TRUE)
+    samp.varname=character(), verbose=TRUE)
 </pre>
 
 
@@ -37,6 +37,11 @@ seqDelete(gdsfile, info.varname=character(), format.varname=character(),
 <td>
 <p>the variables in the FORMAT field, i.e.,
 &quot;annotation/format/VARIABLE_NAME&quot;</p>
+</td></tr>
+<tr valign="top"><td><code>samp.varname</code></td>
+<td>
+<p>the variables in the sample annotation field, i.e.,
+&quot;sample.annotation/VARIABLE_NAME&quot;</p>
 </td></tr>
 <tr valign="top"><td><code>verbose</code></td>
 <td>
@@ -89,5 +94,5 @@ cleanup.gds("tmp.gds")
 unlink("tmp.gds", force=TRUE)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.10.2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.12.0 <a href="00Index.html">Index</a>]</div>
 </body></html>
