--- a/release/help/seqParallel.html
+++ b/release/help/seqParallel.html
@@ -19,6 +19,8 @@
 seqParallel(cl=getOption("seqarray.parallel", FALSE), gdsfile, FUN,
     split=c("by.variant", "by.sample", "none"), .combine="unlist",
     .selection.flag=FALSE, ...)
+seqParApply(cl=getOption("seqarray.parallel", FALSE), x, FUN,
+    load.balancing=TRUE, ...)
 </pre>
 
 
@@ -36,12 +38,12 @@ See details</p>
 </td></tr>
 <tr valign="top"><td><code>gdsfile</code></td>
 <td>
-<p>a <code><a href="SeqVarGDSClass-class.html">SeqVarGDSClass</a></code> object</p>
+<p>a <code><a href="SeqVarGDSClass-class.html">SeqVarGDSClass</a></code> object, or <code>NULL</code></p>
 </td></tr>
 <tr valign="top"><td><code>FUN</code></td>
 <td>
 <p>the function to be applied, should be like
-<code>FUN(gdsfile, ...)</code></p>
+<code>FUN(gdsfile, ...)</code> or <code>FUN(...)</code></p>
 </td></tr>
 <tr valign="top"><td><code>split</code></td>
 <td>
@@ -61,6 +63,15 @@ function, like &quot;+&quot;.</p>
 <p><code>TRUE</code> &ndash; passes a logical vector of selection
 to the second argument of <code>FUN(gdsfile, selection, ...)</code></p>
 </td></tr>
+<tr valign="top"><td><code>x</code></td>
+<td>
+<p>a vector (atomic or list), passed to <code>FUN</code></p>
+</td></tr>
+<tr valign="top"><td><code>load.balancing</code></td>
+<td>
+<p>if <code>TRUE</code>, call <code><a href="../../parallel/html/clusterApply.html">clusterApplyLB</a></code>
+instead of <code><a href="../../parallel/html/clusterApply.html">clusterApply</a></code></p>
+</td></tr>
 <tr valign="top"><td><code>...</code></td>
 <td>
 <p>optional arguments to <code>FUN</code></p>
@@ -72,13 +83,22 @@ to the second argument of <code>FUN(gdsfile, selection, ...)</code></p>
 
 <p>When <code>cl</code> is <code>TRUE</code> or a numeric value, forking techniques are
 used to create a new child process as a copy of the current R process, see
-<code>?parallel::mcfork</code>. However, forking is not available on Windows, so
-serial processing is used instead. In order to use multiple processes on
-Windows, users have to create a cluster object via <code><a href="../../parallel/html/makeCluster.html">makeCluster</a></code>.
+<code>?parallel::mcfork</code>. However, forking is not available on Windows, and
+<code><a href="../../parallel/html/makeCluster.html">makeCluster</a></code> is called to make a cluster which will be
+deallocated after calling <code>FUN</code>.
 </p>
 <p>It is strongly suggested to use <code>seqParallel</code> together with
 <code>seqParallelSetup</code>. <code>seqParallelSetup</code> could work around the problem
-of forking on Windows.
+of forking on Windows, without allocating clusters frequently.
+</p>
+<p>The user-defined function could use two predefined variables
+<code>.seq_process_count</code> and <code>.seq_process_index</code> to tell the total
+number of cluster nodes and which cluster node being used.
+</p>
+<p><code>seqParallel(, gdsfile=NULL, FUN=..., split="none")</code> might be used to
+setup multiple streams of pseudo-random numbers, and see
+<code><a href="../../parallel/html/RngStream.html">nextRNGStream</a></code> or <code><a href="../../parallel/html/RngStream.html">nextRNGSubStream</a></code> in the package
+<code>parallel</code>.
 </p>
 
 
@@ -136,8 +156,8 @@ summary(afreq2)
 
 
 # check
+length(afreq1)  # 1348
 all(afreq1 == afreq2)
-
 
 ################################################################
 # check -- variant splits
@@ -151,6 +171,14 @@ seqParallel(, gdsfile, FUN = function(f) {
 
 ################################################################
 
+seqParallel(, NULL, FUN = function() {
+        paste(.seq_process_index, .seq_process_count, sep="/")
+    }, split = "none")
+
+
+################################################################
+
+
 # close the GDS file
 seqClose(gdsfile)
 
@@ -158,5 +186,5 @@ seqClose(gdsfile)
 seqParallelSetup(FALSE)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.10.2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.12.0 <a href="00Index.html">Index</a>]</div>
 </body></html>
